assets/css/main.css
/* ... */
/* Medium */

	@media screen and (max-width: 980px) {

		/* Articles */

			#top {
				text-align: center;
				padding: 5em 0;
			}

				#top .image {
					margin: 0 auto 2em auto;
				}

	}

/* Small */

	@media screen and (max-width: 736px) {

		/* Basic */

			body {
				padding-top: 44px;
			}

			body, input, textarea, select {
				line-height: 1.75em;
				font-size: 10pt;
				letter-spacing: 0;
			}

			h1, h2, h3, h4, h5, h6 {
				font-size: 1.25em;
				margin: 0 0 0.4em 0;
			}

			h1 {
				font-size: 2.25em;
				line-height: 1.25em;
			}

			header {
				margin: 0 0 2em 0;
			}

				header > p {
					font-size: 1.25em;
				}

			footer {
				margin: 2.5em 0 0 0;
			}

				footer > p {
					font-size: 1.25em;
				}

			hr {
				margin: 1.5em 0 2em 0;
			}

		/* Section/Article */

			section, article {
				clear: both;
			}

		/* Button */

			input[type="button"],
			input[type="submit"],
			input[type="reset"],
			button,
			.button {
				text-align: center;
				font-size: 1.2em;
				width: 100%;
				padding: 1em 0 1em 0;
			}

				input[type="button"].large,
				input[type="submit"].large,
				input[type="reset"].large,
				button.large,
				.button.large {
					font-size: 1.2em;
					letter-spacing: 0;
				}

		/* Social */

			ul.social {
				padding: 1em 0.5em 0 0.5em;
			}

				ul.social li {
					margin: 0.5em 0.5em 0.5em 0.5em;
				}

					ul.social li a {
						top: 0 !important;
					}

						ul.social li a:before {
							background-color: transparent !important;
						}

		/* Actions */

			ul.actions {
				margin: 0;
			}

				ul.actions li {
					display: block;
					margin: 15px 0 0 0;
				}

					ul.actions li:first-child {
						margin-top: 0;
					}

		/* Box */

			.box {
				padding: 30px 20px 30px 20px;
				margin: 0 0 20px 0 !important;
			}

				.box h3 {
					margin-bottom: 0.25em;
				}

				.box .image.centered {
					margin-bottom: 1em;
				}

				.box .image.featured {
					position: relative;
					left: 20px;
					top: 20px;
					margin: -50px 0 50px -40px;
					width: auto;
				}

				.box.style1 {
					max-width: 32em;
					margin-left: auto !important;
					margin-right: auto !important;
				}

				.box.style2 {
					max-width: 32em;
					margin-left: auto !important;
					margin-right: auto !important;
				}

		/* Wrappers */

			.wrapper {
				padding: 3em 0;
				text-align: center;
			}

		/* Nav */

			#nav {
				height: 44px;
				line-height: 44px;
			}

				#nav a {
					padding: 0 0.75em;
					height: inherit;
					line-height: inherit;
					border-radius: 0;
				}

					#nav a:hover {
						background-color: transparent;
					}

		/* Articles */

			#top {
				padding: 3em 0;
			}

				#top .image {
					width: 15em;
					height: 15em;
					margin-bottom: 0;
				}

				#top p {
					font-size: 1em;
				}

			#contact footer {
				margin: 0;
			}

		/* Copyright */

			#copyright {
				font-size: 1em;
				margin: 0;
			}

				#copyright li {
					display: block;
					margin: 1em 0 0 0;
					padding: 0;
					box-shadow: none;
					border-left: 0;
				}

					#copyright li:first-child {
						margin-top: 0;
					}

	}

	/* Mobile fixes */
@media screen and (max-width: 736px) {

  /* HERO: keep headshot from overlapping intro text */
  #top .image.fit {
    max-width: 260px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1.5rem;
  }

  /* Add breathing room before the header text */
  #top header {
    margin-top: 0.75rem;
  }
}
@media screen and (max-width: 736px) {

  /* WORK CARDS: prevent featured icon from getting cropped */
  .box.style1 {
    overflow: visible;
  }

  .box.style1 .icon.featured {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
  }
}

